<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_fav"
        android:onClick="onFav"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:text="@string/menu_favList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_quit"
        android:onClick="onQuit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CF0A0A"
        android:text="@string/menu_quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fav"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/btn_letscook"
        android:onClick="onCook"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:text="@string/menu_foodList"
        app:layout_constraintBottom_toTopOf="@+id/btn_quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>