<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutorialActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cover"

                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="150dp"
                android:adjustViewBounds="false"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_tuto_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_tuto_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/subtitle"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/text_composition_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_include"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp">

                <ListView
                    android:id="@+id/list_include"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="multipleChoice" />
            </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <Button
                    android:id="@+id/button4"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:text="@string/menu_play"
                    android:onClick="onStart"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>